--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-feather": "^2.0.10",
+    "react-lottie": "^1.2.3",
     "react-paginate": "^8.1.3",
     "react-redux": "^8.0.2",
     "react-router-dom": "5.3.3",
@@ -25,6 +26,7 @@
     "@types/axios": "^0.14.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/react-lottie": "^1.2.6",
     "@types/react-paginate": "^7.1.1",
     "@types/react-redux": "^7.1.24",
     "@types/react-router-dom": "^5.3.3",
