--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "prettier": "prettier/prettier",
     "typescript": "^4.6.3",
-    "vite": "^2.9.9"
+    "vite": "^2.9.9",
+    "vite-tsconfig-paths": "^3.5.0"
   }
 }
